test/errors/wrong_arg_type.sl
# expect: COMPERROR
auto fn = (fixed a) -> none {};
fn("hello");
